# time-series-indexing

./: .gitignore  CODEBASE_ANALYSIS.md  PATTERN_SETUP.md  README.md  astro_embedding_pipeline.py  astro_financial_storage_design.md  astro_financial_system_design.md  astrological_insights_schema.sql  debug_embedding_similarity.py  docker-compose.yml  live_trading_design.py  product_architecture.md  pyproject.toml  pytest.ini  requirements_embedding.txt  temp_data.csv  test_api.py  test_embedding_quality.py  test_loader_simple.py  test_neural_clean.py  test_patchtst_randomness.py  test_planetary_backtest.py  test_query_accuracy.py  test_standalone.py  testing_strategy.py
backend/: Dockerfile  Dockerfile.indexer  Dockerfile.market-encoder  README.md  README_MARKET_ENCODER.md  docker-compose.test.yml  docker-compose.yml  get_all_patterns.py  pyproject.toml  requirements-lunar.txt  requirements.txt  test_fed_rate_tool.py
backend/.github/workflows/: deploy-backend-services.yml
backend/app/: auth.py  main.py
backend/config/: securities.yaml  securities_simple.yaml  trading_config.yaml
backend/deploy/docker/: market-encoder.Dockerfile  query-service.Dockerfile
backend/deploy/k8s/market-encoder/: debug-pod.yaml  market-encoder-secrets.template.yaml  market-encoder-test-job.yaml  simple-market-encoder-cronjob.yaml
backend/deploy/k8s/secrets/: anthropic-secret.template.yaml  anthropic-secret.yaml  chromadb-secret.template.yaml  fred-api-secret.template.yaml
backend/deploy/k8s/services/: backfill-service-simple.yaml  backfill-service.yaml  backtesting-service-clean.yaml  backtesting-service-final.yaml  backtesting-service-local.yaml  backtesting-service-real.yaml  backtesting-service-simple.yaml  backtesting-service.yaml  recommendation-service.yaml
backend/deploy/k8s/services-docker/: backfill-service.yaml  backtesting-service.yaml  query-service.yaml  recommendation-service.yaml
backend/deploy/k8s/shared/: astro-backfill-50years-job.yaml  astro-trading-analysis-job.yaml  batch-astro-analysis-job.yaml  bug-fixed-enhanced-hourly-lunar-backtest-job.yaml  check-astro-data-job.yaml  check-hourly-data-job.yaml  check-insights-job.yaml  check-zodiac-signs-job.yaml  claude-oil-analysis-job.yaml  comprehensive-astro-trading-job.yaml  correct-enhanced-hourly-lunar-backtest-job.yaml  create-intraday-table-job.yaml  daily-conditions-job.yaml  daily-recommendations-job.yaml  debug-astro-update-job.yaml  debug-interpolated-lunar-job.yaml  debug-lunar-patterns-job.yaml  enhanced-daily-lunar-cronjob.yaml  enhanced-daily-lunar-fixed.yaml  enhanced-daily-lunar-platinum-job.yaml  enhanced-daily-lunar-silver-job.yaml  enhanced-daily-lunar-silver-timing-job.yaml  enhanced-hourly-lunar-backtest-job.yaml  enhanced-lunar-signs-job.yaml  enhanced-positional-lunar-job.yaml  extend-symbol-migration-job.yaml  final-correct-enhanced-hourly-lunar-backtest-job.yaml  final-enhanced-hourly-lunar-backtest-job.yaml  (+43 more)
backend/docker/: Dockerfile.backfill  Dockerfile.backtesting  Dockerfile.base  Dockerfile.recommendation  README.md  build.sh
backend/docs/: ASTROLOGICAL_ANALYSIS_DATABASE_INTEGRATION.md  COMPREHENSIVE_ASTRO_TRADING_ANALYSIS.md  COMPREHENSIVE_TRADING_SYSTEM_ARCHITECTURE.md  astrological_data_model.md  astrological_query_examples.md  backtesting_service_usage.md
backend/k8s/: chroma-backup-cronjob.yaml  chroma-monitoring.yaml  market-encoder-config.yaml  market-encoder-cronjob.yaml  market-encoder-deployment.yaml  namespace.yaml  simple-market-encoder-cronjob.yaml
backend/market_encoder/: config.py  data_sources.py  encoder.py  multi_encoder.py  simple_encoder.py  test_encoder.py  text_generator.py
backend/migrations/: 001_initial_schema.sql
backend/scripts/: backfill_indexer.py  daily_indexer.py  daily_market_encoding.py  deploy.sh  migrate.py  oil_futures_backfill.py  run_market_encoder.py  setup_comprehensive_trading_system.sh  setup_database_simple.py  simple_daily_encoding.py  sp500_backfill.py  test_backfill_events.py  test_backtesting_service.py  test_dual_storage.py  test_enhanced_fred.py  test_fred_events.py  test_market_encoder.py  test_query_server.py  verify_production.py
backend/scripts/astro/: test_comprehensive_analysis.py  trading_astro_correlation.py
backend/scripts/llm_analysis/: run_batch_analysis.py  run_daily_conditions.py  run_daily_recommendations.py  run_oil_astro_analysis.py  setup_and_run_batch.py  test_local_analysis.py
backend/scripts/migrations/: add_astro_columns_to_trading_opportunities.sql  add_astrological_insights_tables.sql  create_enhanced_astro_schema.sql  setup_insights_schema.py
backend/scripts/trading/: analyze_trading_opportunities.py
backend/sql/: README.md  flyway.conf
backend/sql/flyway/: V001__initial_schema.sql  V004__clean_lunar_patterns_schema.sql  V005__fix_lunar_patterns_data_issues.sql  V006__add_astrological_insights_table.sql  V007__create_planetary_patterns_table.sql  V008__add_ingress_support_to_planetary_patterns.sql  V009__create_financial_events_table.sql  V010__create_market_data_table.sql
backend/sql/migrations/: 003_extend_symbol_length.sql
backend/sql/schema/: functions.sql  indexes.sql  tables.sql  views.sql
backend/sql/scripts/: compare_schema.sh  create_migration.sh  run_migration.py
backend/src/: demo_llm_tool_usage.py  test_mcp_tool.py  test_mcp_tool_simple.py
backend/src/astro_encoder/: __init__.py
backend/src/event_encoder/: __init__.py
backend/src/llm_analyzer/: Dockerfile  Dockerfile.interpolated  README.md  __init__.py  enhanced_daily_lunar_tester.py  enhanced_hourly_lunar_tester.py  enhanced_lunar_tester.py  interpolated_hourly_lunar_tester.py  lunar_config.py  lunar_pattern_tester.py  real_oil_lunar_tester.py  requirements.txt  run_lunar_backtest.py  simple_lunar_tester.py
backend/src/market_encoder/: __init__.py
backend/src/mcp_tools/: __init__.py
backend/src/services/: backfill_service.py  backtesting_service.py  chroma_manager.py  events_postgres_manager.py  market_data_manager.py  recommendation_service.py  requirements.txt
backend/src/trading_analyzer/: __init__.py
(+151 files in other folders)
