[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-indexing"
version = "0.1.0"
description = "Time series data indexing and encoding system for financial markets"
authors = [{name = "Justin Tang", email = "justin@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["finance", "time-series", "indexing", "market-data"]

dependencies = [
    # Core dependencies
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Database
    "psycopg2-binary>=2.9.0",

    # Data fetching
    "requests>=2.31.0",

    # Configuration
    "pyyaml>=6.0",

    # Vector database and embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Async support
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
market-encoder-daily = "scripts.daily_market_encoding:main"
market-encoder-simple = "scripts.simple_daily_encoding:main"
market-encoder-test = "scripts.test_market_encoder:main"

[project.urls]
Homepage = "https://github.com/yourusername/time-series-indexing"
Repository = "https://github.com/yourusername/time-series-indexing"
Issues = "https://github.com/yourusername/time-series-indexing/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["market_encoder*", "shared*"]

[tool.setuptools.package-data]
market_encoder = ["*.yaml", "*.yml"]

# Development tools configuration
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"